--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{D564DC2A-C8A4-49C8-9038-134819E7CC9B}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>PE-Library</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
